--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyMoment"
-        tools:targetApi="31">
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
+        tools:targetApi="31"
+        android:name = "com.agp.mymoment.MyMomentHilt">
         <activity
             android:name=".MainActivity"
             android:exported="true"
