--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,18 @@ buildscript {
     ext {
         compose_ui_version = '1.3.3'
     }
+
+    dependencies {
+        //classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44'
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+
+    //Hilt
+    id("com.google.dagger.hilt.android") version "2.44" apply false
 }
