Implementado menu ajustes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,9 @@ dependencies {
 
     //SystemBarController
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.28.0"
+
+    //Datastore
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
 }
 
 kapt {
