Implementados backend y frontend de editar perfil

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,10 @@ dependencies {
 
     //Datastore
     implementation("androidx.datastore:datastore-preferences:1.0.0")
+
+    //Camera implementation
+    implementation "com.google.accompanist:accompanist-permissions:0.20.3"
+
 }
 
 kapt {
