--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,9 @@ dependencies {
 
     //Camera implementation
     implementation "com.google.accompanist:accompanist-permissions:0.20.3"
+    implementation "androidx.camera:camera-camera2:1.2.1"
+    implementation "androidx.camera:camera-lifecycle:1.2.1"
+    implementation "androidx.camera:camera-view:1.2.1"
 
 }
 
