--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,13 @@ buildscript {
         compose_ui_version = '1.3.3'
     }
 
+    repositories {
+        google()
+        mavenCentral()
+    }
+
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.14'
+        classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44'
     }
 
