--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,6 +113,8 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     //Pager https://developer.android.com/jetpack/androidx/releases/paging?hl=es-419
+    implementation "com.google.accompanist:accompanist-pager:0.28.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.28.0"
 
 
 }
